--- a/Docker/kube.yaml
+++ b/Docker/kube.yaml
@@ -1,41 +1,51 @@
-apiVersion: v1
-kind: Pod
+apiVersion: run.ai/v1
+kind: RunaiJob
 metadata:
-  name: sudokube
+  name: sudokube 
   labels:
     app: sudokube
+    user: basil
+    priorityClassName: "build"
 spec:
-  nodeSelector:
-    hardware-type: CPUONLY
-   #For a server with GPUs
-   #hardware-type: NVIDIAGPU 
-  containers:
-  - name:  sudokube
-    image: sachinbjohn/kube-base:latest
-    workingDir: /var/data
-    command:
-      - "/usr/sbin/sshd"
-      - "-De"
-    volumeMounts:
-      - mountPath: /var/data
-        name: site-data
-    ports:
-          - containerPort: 2222
-  volumes:
-  - name: site-data
-    persistentVolumeClaim:
-      claimName: data-scratch
+  template:
+    metadata:
+      labels:
+        user: sachin.basiljohn # User e.g. firstname.lastname
+    spec:
+      hostIPC: true
+      schedulerName: runai-scheduler
+      restartPolicy: Never
+  #    securityContext:
+   #     runAsUser: 146311 # insert uid found in people.epfl in admistrative data
+        #runAsGroup: S14336 # insert gid as found in people.epfl in admistrative data
+        #fsGroup: S14336
+      containers:
+        - name:  sudokube
+          image: sachinbjohn/kube-base:latest
+          workingDir: /var/data
+          command:
+            - "/usr/sbin/sshd"
+            - "-De"
+          volumeMounts:
+            - mountPath: /var/data
+              name: site-data
+          ports:
+                - containerPort: 2222
+      volumes:
+        - name: site-data
+          persistentVolumeClaim:
+            claimName: data-scratch
 ---
-kind: Service 
-apiVersion: v1 
+kind: Service
+apiVersion: v1
 metadata:
-  name: sudokube-service 
+  name: sudokube-service
 spec:
   type: NodePort
   selector:
-    app: sudokube
+    user: sachin.basiljohn
   ports:
     - nodePort: 27109
-      port: 2222 
+      port: 2222
       targetPort: 2222
 
