--- a/makefile_linux
+++ b/makefile_linux
@@ -7,10 +7,10 @@ JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 
 all:
 	javah -cp $(CP):target/scala-2.12/classes:. backend.CBackend
-	g++ -std=c++11 -shared -fPIC -O3 -I/usr/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux -I. src/main/cpp/CBackend.cpp src/main/cpp/CubeArrays.cpp src/main/cpp/Keys.cpp -o libCBackend.so
+	g++ -std=c++11 -shared -fPIC -O3 -I/usr/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux -I. src/main/cpp/CBackend.cpp src/main/cpp/CubeArrays.cpp  -o libCBackend.so
 
 clean:
 	rm -f libCBackend.so backend_CBackend.h time_test
 
 time_test: src/main/cpp/main.cpp
-	g++ -O3 src/main/cpp/main.cpp src/main/cpp/CubeArrays.cpp src/main/cpp/Keys.cpp -o time_test
+	g++ -O3 src/main/cpp/main.cpp src/main/cpp/CubeArrays.cpp  -o time_test
