add sbt compile as first step to make

--- a/makefile_linux
+++ b/makefile_linux
@@ -6,6 +6,7 @@ CP=~/.ivy2/cache/org.scala-lang/scala-library/jars/scala-library-2.12.7.jar
 JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 
 all:
+    sbt compile
 	javah -cp $(CP):target/scala-2.12/classes:. backend.CBackend
 	g++ -std=c++11 -shared -fPIC -O3 -I/usr/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux -I. src/main/cpp/CBackend.cpp src/main/cpp/CubeArrays.cpp  -o libCBackend.so
 
