--- a/makefile_mac
+++ b/makefile_mac
@@ -8,10 +8,10 @@ JAVA_HOME=/Users/jayatila/.sdkman/candidates/java/current/
 all:
 	sbt compile
 	javah -cp $(CP):target/scala-2.12/classes:. backend.CBackend
-	g++ -std=c++11 -dynamiclib -O3 -I/usr/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin -I. src/main/cpp/CBackend.cpp src/main/cpp/CubeArrays.cpp  -o libCBackend.dylib
+	g++ -std=c++17 -dynamiclib -O3 -I/usr/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin -I. src/main/cpp/CBackend.cpp src/main/cpp/CubeArrays.cpp src/main/cpp/SecondaryStorage.cpp  -o libCBackend.dylib
 
 clean:
 	rm -f libCBackend.dylib backend_CBackend.h time_test
 
 time_test: src/main/cpp/main.cpp
-	g++ -O3 src/main/cpp/main.cpp src/main/cpp/CubeArrays.cpp  -o time_test
+	g++ -O3 src/main/cpp/main.cpp src/main/cpp/CubeArrays.cpp src/main/cpp/SecondaryStorage.cpp  -o time_test
