--- a/makefile_mac
+++ b/makefile_mac
@@ -8,7 +8,9 @@ JAVA_HOME=/Users/jayatila/.sdkman/candidates/java/current/
 all:
 	sbt compile
 	javah -cp $(CP):target/scala-2.12/classes:. backend.CBackend
-	g++ -std=c++17 -dynamiclib -O3 -I/usr/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin -I. src/main/cpp/CBackend.cpp src/main/cpp/CubeArrays.cpp src/main/cpp/SecondaryStorage.cpp  -o libCBackend.dylib
+	javah -cp $(CP):target/scala-2.12/classes:. backend.CBackendSecondaryStorage
+	g++ -std=c++17 -dynamiclib -O3 -I/usr/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin -I. src/main/cpp/CBackend.cpp src/main/cpp/CubeArrays.cpp  -o libCBackend.dylib
+	g++ -std=c++17 -dynamiclib -O3 -I/usr/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin -I. src/main/cpp/CBackendSecondaryStorage.cpp src/main/cpp/CubeArrays.cpp src/main/cpp/SecondaryStorage.cpp  -o libCBackendSecondaryStorage.dylib
 
 clean:
 	rm -f libCBackend.dylib backend_CBackend.h time_test
